@@ -1,3 +1,7 @@
+Console-2.0.1-beta
+=============================================================
+- Saving code in $_SESSION;
+
 Console-2.0.0-rc
 =============================================================
 - Ace integration fix;
